welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:15: error: not found: type YELLOW
setCouleurBrosse(c : YELLOW)
                     ^FlowerPot:15: error: not found: value c
setCouleurBrosse(c : YELLOW)
                 ^FlowerPot:20: error: not found: type YELLOW
setCouleurBrosse(c : YELLOW)
                     ^FlowerPot:20: error: not found: value c
setCouleurBrosse(c : YELLOW)
                 ^